--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
 asgiref==3.9.1
-distlib==0.3.9
+dj-database-url==3.0.1
 Django==5.2.4
-filelock==3.18.0
-gunicorn==23.0.0
-packaging==25.0
-platformdirs==4.3.8
 sqlparse==0.5.3
 tzdata==2025.2
-virtualenv==20.31.2
 whitenoise==6.9.0
