--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,10 @@ services:
   - type: web
     name: myportfolio
     env: python
-    buildCommand: ""
+    buildCommand: |
+      pip install -r requirements.txt
+      python manage.py migrate
+      python manage.py collectstatic --noinput
     startCommand: gunicorn portfolio.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
