--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
       pip install -r requirements.txt
       python manage.py migrate
       python manage.py collectstatic --noinput
-    startCommand: gunicorn portfolio.wsgi:application
+    startCommand: gunicorn myportfolio.wsgi
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: portfolio.settings
