Update render.yaml with correct build and start commands

--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,13 @@
 services:
   - type: web
-    name: myportfolio
+    name: Swara-Portfolio
     env: python
-    buildCommand: |
-      pip install -r requirements.txt
-      python manage.py collectstatic --noinput
-      python manage.py migrate
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn portfolio.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: portfolio.settings
-      - key: PYTHON_VERSION
-        value: 3.10
+      - key: SECRET_KEY
+        generateValue: true
+      - key: DEBUG
+        value: false
